--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -7,13 +7,22 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Fazemos sua entrega de forma rápida e barata. Entre no site para saber mais."
+      content="Velas aromáticas sustentaveis, artesanais e energéticas. Sinta mais que um aroma, viva uma sensação! Entre no site para saber mais."
     />
-   
+
     <title>Magia das velas</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Italiana&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <noscript>Velas aromáticas de soja 100% veganas. Conheça a linha completa de Velas Aromáticas.</noscript>
+    <noscript
+      >Velas aromáticas de soja 100% veganas. Conheça a linha completa de Velas
+      Aromáticas.</noscript
+    >
     <div id="root"></div>
     <!--
       This HTML file is a template.
